CloudFormation/security.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Create SecurityGroup for WebServer and DB

Parameters:
  CidrIpForSSH:
    Description: IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.

  CidrIpForHTTP:
    Description: IP address range that can be used to HTTP to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.

  CidrIpForHTTPS:
    Description: IP address range that can be used to HTTPS to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.

Resources:
  SecurityGroupForWebServer:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup For WebServer
      VpcId: !ImportValue MyVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref CidrIpForSSH
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref CidrIpForHTTP
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref CidrIpForHTTPS
      Tags:
        - Key: Name
          Value: sg-for-web-server

  SecurityGroupForDB:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup For DB
      VpcId: !ImportValue  MyVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref SecurityGroupForWebServer
      Tags:
        - Key: Name
          Value: sg-for-db

Outputs:
  StackSecurityGroupForWebServer:
    Description: Id of the SecurityGroupForWebServer
    Value: !Ref SecurityGroupForWebServer
    Export:
      Name: MySecurityGroupForWebServer

  StackSecurityGroupFoDB:
    Description: Id of the SecurityGroupForDB
    Value: !Ref SecurityGroupForDB
    Export:
      Name: MySecurityGroupForDB
